[gd_scene load_steps=5 format=3 uid="uid://c1uqhib7jm8ip"]

[ext_resource type="Script" uid="uid://b2siscbwocdtv" path="res://Interactibles/interaction.gd" id="1_upgdu"]
[ext_resource type="Texture2D" uid="uid://kn7u0vaja5de" path="res://Sprites/heiroglyphs.png" id="2_g5ja2"]
[ext_resource type="PackedScene" uid="uid://uetpvi1ce0fx" path="res://Interactibles/canvas_layer.tscn" id="3_g5ja2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6an2m"]
size = Vector2(193, 70)

[node name="Interaction" type="Node2D" node_paths=PackedStringArray("ui_layer")]
script = ExtResource("1_upgdu")
message = "GABAGOOL?? OVA HERE!!"
ui_layer = NodePath("Sprite2D/CanvasLayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_g5ja2")

[node name="CanvasLayer" parent="Sprite2D" instance=ExtResource("3_g5ja2")]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_6an2m")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
